# ableton-camera

./: .gitignore  README.md  config.example.yaml  pyproject.toml
bridge/: __init__.py  __main__.py  capture.py  clip_recording.py  config.py  control.py  metadata.py  naming.py  obs_client.py  osc_client.py  osc_clip_probe.py  osc_query.py  prompts.py  recorder.py  recording_state.py  take_sidecar.py
docs/: CAPTURE_MIDI.md  DESIGN.md  PLAN.md  SETUP.md  SYNC.md  TDD_PLAN.md  VIDEO_PLACEMENT.md
docs/superpowers/plans/: 2026-07-19-replay-buffer-midi-capture.md
docs/superpowers/specs/: 2026-07-19-replay-buffer-midi-capture-design.md
extensions/ableton-camera-video/: manifest.json  package-lock.json  package.json
extensions/ableton-camera-video/src/: dialog.ts  extension.test.ts  extension.ts  (+3 more)
scripts/: install_abletonosc.sh  patch_abletonosc_count_in.py  smoke_abletonosc.py
tests/: conftest.py
tests/contract/: test_abletonosc_addresses.py
tests/fakes/: fake_obs.py  fake_osc_query.py
tests/fixtures/: config_minimal.yaml
tests/integration/: test_finalize_move.py  test_recorder_osc.py
tests/unit/: test_capture.py  test_clip_recording.py  test_config.py  test_config_errors.py  test_config_obs_host.py  test_main_capture_cli.py  test_main_logging.py  test_metadata.py  test_naming.py  test_obs_client.py  test_obs_resolve.py  test_osc_listener.py  test_osc_metadata_fetch.py  test_osc_query.py  test_osc_query_concurrency.py  test_prompts.py  test_recorder.py  test_recorder_count_in.py  test_recorder_errors.py  test_recording_state.py  test_take_sidecar.py
